# call_to_text

./: .dockerignore  .gitignore  Dockerfile  README.md  call_to_text.py  get_ffmpeg_path.py  main.py  pyproject.toml  requirements.txt  run.sh  run_daily.sh
tools/: wget-log  wget-log.1
