[project]
name = "call-to-text"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ffmpeg>=1.4",
    "openai-whisper>=20250625",
    "pandas>=3.0.0",
    "portable-ffmpeg>=0.1.0",
    "psycopg2-binary>=2.9.11",
    "pydub>=0.25.1",
    "pymysql>=1.1.2",
    "snownlp>=0.12.3",
    "zhconv>=1.4.3",
]
